Ignore visual studio 2012 bin directories.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # Ignore the bin and original directory
 bin/
 original/
+
+# Ignore visual studio 2012 bin directories
+src/Backup/
+src/Debug/
+src/*/obj/
