--- a/src/GazeTrackerUI/GazeTrackerUI.csproj
+++ b/src/GazeTrackerUI/GazeTrackerUI.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{41CE4BE5-AB35-45ED-945F-DE384454215C}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GazeTrackerUI</RootNamespace>
     <AssemblyName>GazeTrackerUI</AssemblyName>
@@ -14,7 +14,8 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <StartupObject>GazeTrackerUI.App</StartupObject>
+    <StartupObject>
+    </StartupObject>
     <ApplicationIcon>Graphics\eye.ico</ApplicationIcon>
     <ManifestCertificateThumbprint>457963A073CEDA37B15D762A0DDA1CA155D1FFC9</ManifestCertificateThumbprint>
     <ManifestKeyFile>GazeTrackerUI_TemporaryKey.pfx</ManifestKeyFile>
@@ -46,7 +47,6 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <NoWin32Manifest>true</NoWin32Manifest>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
@@ -90,6 +90,9 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AvalonControlsLibrary, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
